Fixed bug not showing grocery list button in RecipeDetails.jsx.

--- a/src/components/RecipeDetails/LowerSection/RecipeIngredientsAndInstructions/RecipeIngredients/RecipeIngredients.css
+++ b/src/components/RecipeDetails/LowerSection/RecipeIngredientsAndInstructions/RecipeIngredients/RecipeIngredients.css
@@ -45,6 +45,7 @@
         margin-right: 0px;
         align-self: center;
         width: 80%;
+        margin-bottom: 30px;
     }
 
     .recipe-details__ingredients-subheader {
